index.css
/* index.html */
html {
    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
body {
    display: flex;
    flex-direction: column;
    background-color: #2c2936;
    align-items: center;
    color: #c3aef5;
}
p,
.faq {
    margin-top: 10px;
    max-width: 570px;
    min-width: 570px;
}
footer {
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    background-color: #b39de7;
    color: #211b2e;
    padding: 5px;
    box-shadow: 0 0 10px #414141;
}

button {
    background-color: transparent;
    border: transparent;
    margin-top: -8px;
    -webkit-tap-highlight-color: transparent;
}
input[type="range"] {
    width: 100%;
    -webkit-appearance: none;
    height: 30px;
    background: #ab9bd0;
    outline: none;
    opacity: 0.7;
    border-radius: 2px;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 35px;
    height: 35px;
    background: #c3aef5;
    border-radius: 2px;
    border: 1px #ded2fa solid;
}
img {
    width: 120px;
    height: auto;
    padding-bottom: 20px;
}
.stage {
    color: #2c2936;
    font-weight: bold;
    margin-left: -20px;
    margin-top: -40px;
}
.logo {
    background: url("./img/logo.svg") no-repeat center center / cover;
    width: 750px;
    height: 200px;
    text-align: center;
    margin-bottom: 80px;
    margin-top: -15px;
}
.menu {
    display: flex;
    margin-left: 300px;
    list-style: none;
    margin-top: 10px;
    gap: 10px;
}
li.item a {
    background-color: #c3aef5;
    padding: 5px;
    border-radius: 0.2em;
    font-size: 1.1em;
}
li.item a:hover,
.link a:hover {
    background-color: #d9c9ff;
}
.containersOne {
    display: flex;
    justify-content: center;
    margin-top: -40px;
}
.containersTwo {
    display: flex;
    justify-content: center;
}
.container {
    display: flex;
    width: 220px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    margin-left: 10px;
    margin-right: 10px;
    padding-right: 10px;
    padding-left: 10px;
    padding-bottom: 50px;
}
.icons {
    filter: invert(0%);
    width: 30px;
    margin-bottom: -5px;
    padding: 0px;
}
a {
    color: #211b2e;
    font-weight: bold;
    text-decoration: none;
}
@media only screen and (max-width: 768px) {
    .containersOne {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
    }
    .containersTwo {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
    }
    .container {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        margin-top: 10px;
        margin-bottom: 30px;
    }
    .logo {
        width: 450px;
        margin-top: -55px;
        margin-bottom: 40px;
        margin-right: 20px;
    }
    .menu {
        margin-top: 50px;
        margin-left: 165px;
    }
    li.item {
        font-size: 0.8em;
    }
    .stage {
        margin-left: -35px;
        margin-top: -35px;
        font-size: 0.8em;
    }
}
/* about.html */
.link a {
    background-color: #c3aef5;
    padding-left: 2px;
    padding-right: 2px;
    border-radius: 0.2em;
}
.aboutContainer {
    background-color: #c3adf5;
    color: #3f3751;
    padding: 0.5em;
    border-radius: 0.5em;
    margin-top: -28px;
    margin-left: 26px;
    margin-right: 10px;
    margin-bottom:50px;
}
content {
    margin-top: -45px;
    margin-bottom: 25px;
}
@media only screen and (max-width: 768px) {
    content {
        margin-top: -45px;
        margin-bottom: 25px;
    }
    .aboutContainer {
        margin-left: 0px;
        max-width: 345px;
        margin-top: -30px;
    }
}
/* faq.html */
.faq {
    display: inline-block;
    margin-top: -20px;
}
.faq-question {
    display: inline;
    background-color: #c3adf5;
    color: #3f3751;
}
.faq-answer {
    background-color: #1b1721;
    color: #c3aef5;
    margin-bottom: 40px;
}
.faq-answer,
.faq-question {
    padding: 0.5em;
    border-radius: 0.5em;
    margin-right: 10px;
}
ul.req {
    background-color: #1b1721;
    color: #c3aef5;
    padding: 1em;
    padding-left: 2em;
    border-radius: 0.5em;
    margin-right: -18px;
    margin-top: 10px;
}
ul.req a {
    padding-top: 0px;
    padding-bottom: 0px;
}
@media only screen and (max-width: 768px) {
    .faq-question {
        display: block;
        background-color: #c3adf5;
        color: #3f3751;
    }
    .faq-question {
        margin-bottom: -5px;
    }
    .faq {
        margin-top: -40px;
    }
    ul.req {
        margin-right: 10px;
    }
    li {
        font-size: 1em;
    }
    p,
    .faq {
        max-width: 370px;
        min-width: 0px;
    }
}

